--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "OUTPUT_DIR=build gatsby build",
-    "servebuild": "OUTPUT_DIR=build gatsby build && gatsby serve",
+    "servebuild": "OUTPUT_DIR=build gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit"
